--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="project1.html">Project 1</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="project2.html">Project 2</a></li>
             <li><a href="project3.html">Project 3</a></li>
             <li><a href="project4.html">Project 4</a></li>
         </ul>
@@ -24,7 +24,7 @@
         <h2>Projects List</h2>
         <ul>
             <li><a href="project1.html">Project 1</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="project2.html">Project 2</a></li>
             <li><a href="project3.html">Project 3</a></li>
             <li><a href="project4.html">Project 4</a></li>
         </ul>
