--- a/project3.html
+++ b/project3.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="project1.html">Project 1</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="project2.html">Project 2</a></li>
             <li><a href="project3.html">Project 3</a></li>
             <li><a href="project4.html">Project 4</a></li>
         </ul>
