--- a/project1.html
+++ b/project1.html
@@ -3,42 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1 Page</title>
+    <title>Project 3 - Responsive Design and Google Analytics</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/gry2sof.css">
+    <style>
+        /* Add any additional styles specific to this page */
+    </style>
 </head>
 <body>
-    <h1>Understanding Search Engine Optimization</h1>
+    <header>
+        <h1>Project 1 - SEO Best Practices, Accessibility, User Engagement</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="project1.html">Project 1</a></li>
+            <li><a href="project2.html">Project 2</a></li>
+            <li><a href="project3.html">Project 3</a></li>
+            <li><a href="project4.html">Project 4</a></li>
+        </ul>
+    </nav>
+    <main>
+      <br>
+                <h1>Understanding Search Engine Optimization</h1>
+                <br>
+        <div class="preprocessing">
 
-<h2>How Search Engines Work</h2>
-<p>Search engines function through a process known as crawling, indexing, and ranking. Crawlers, also called bots or spiders, explore web pages, collecting information which is then indexed in databases. When a user queries a search engine, it retrieves relevant pages from its index and ranks them based on factors like relevance and authority.</p>
 
-<h3>Importance of Keywords and Descriptions</h3>
-<p>Keywords and descriptions serve as vital meta tags embedded within the HTML code of a webpage. Keywords represent terms and phrases relevant to the content, while descriptions offer concise summaries. Utilizing these meta tags effectively can enhance a page's visibility in search engine results, attracting more organic traffic.</p>
+          <h2>How Search Engines Work</h2><br>
+          <p>Search engines function through a process known as crawling, indexing, and ranking. Crawlers, also called bots or spiders, explore web pages, collecting information which is then indexed in databases. When a user queries a search engine, it retrieves relevant pages from its index and ranks them based on factors like relevance and authority.</p>
+<br>
+          <h2>Importance of Keywords and Descriptions</h2><br>
+          <p>Keywords and descriptions serve as vital meta tags embedded within the HTML code of a webpage. Keywords represent terms and phrases relevant to the content, while descriptions offer concise summaries. Utilizing these meta tags effectively can enhance a page's visibility in search engine results, attracting more organic traffic.</p>
 
-<h4>Elements of Writing Relevant Content Links</h4>
-<p>Writing relevant content links involves four crucial elements:</p>
-<ul>
-    <li><strong>Anchor Text:</strong> The clickable text of the link should accurately describe the linked content.</li>
-    <li><strong>Destination URL:</strong> The link should lead to a relevant and authoritative source.</li>
-    <li><strong>Contextual Relevance:</strong> The link should fit naturally within the surrounding content.</li>
-    <li><strong>Accessibility:</strong> Ensure that links are easily clickable and accessible to users.</li>
-</ul>
+<br>
+          <h2>Elements of Writing Relevant Content Links</h2><br>
+          <p>Writing relevant content links involves four crucial elements:</p>
+          <ul>
+            <br>
+          <strong>Anchor Text</strong>
+          <p>Text that holds the link within it.</p><br>
 
-<h5>Good Heading Hierarchy</h5>
-<p>A good heading hierarchy organizes content in a logical structure that facilitates understanding for both users and search engines. It typically starts with an H1 heading, followed by subsequent headings (H2, H3, etc.) providing increasing levels of detail.</p>
+          <strong>Destination URL</strong>
+          <p>The location the link leads to.</p>
+          <br>
 
-<h6>Example:</h6>
-<pre>
-    <code>
-        &lt;h1>Main Heading&lt;/h1&gt;
-        &lt;h2&gt;Subheading 1&lt;/h2&gt;
-        &lt;p&gt;Content relevant to subheading 1...&lt;/p&gt;
-        &lt;h3&gt;Sub-subheading 1.1&lt;/h3&gt;
-        &lt;p&gt;Further details...&lt;/p&gt;
-        &lt;h3&gt;Sub-subheading 1.2&lt;/h3&gt;
-        &lt;p&gt;Additional information...&lt;/p&gt;
-        &lt;h2&gt;Subheading 2&lt;/h2&gt;
-        &lt;p&gt;Content relevant to subheading 2...&lt;/p&gt;
-    </code>
-</pre>
+          <strong>Contextual Relevance</strong><br>
+          <strong>Accessibility</strong><br>
+          </ul>
+<br><br>
+          <h2>Good Heading Hierarchy</h2> <br>
+          <p>A good heading hierarchy organizes content in a logical structure that facilitates understanding for both users and search engines. It typically starts with an H1 heading, followed by subsequent headings (H2, H3, etc.) providing increasing levels of detail.</p>
+          <br><br>
+          <h1>Example:</h1>
+          <h2>Example</h2>
+          <h3>Example</h3>
+          <h4>Example</h4>
+          <h5>Example</h5>
+          <h6>Example</h6>
+        </div><br><br>
+                <h1>Photo Gallery</h1>
+        <div class="cards">
+            <img src="pix/TR1.png" alt="Tabula Rasa 1">
+            <img src="pix/TR2.png" alt="Tabula Rasa 2">
+            <img src="pix/TR3.png" alt="Tabula Rasa 3">
+        </div>
+    </main>
+    <br><br><br>
+    <footer>
+        <p>&copy; 2024 CMST386. All rights reserved.</p>
+    </footer>
 </body>
 </html>
