Project 2 is not Project 3

--- a/project2.html
+++ b/project2.html
@@ -25,7 +25,7 @@
     </nav>
     <main>
       <br>
-        <h2>Importance of Responsive Design</h2>
+        <h2>Project 4 Planning!</h2><br>
         <p class="preprocessing">
           My website is going to be an storefront / blog for a musician. I like to make music in my free time, and have a project releasing fairly soon, so I thought it could be fun to use the website as promotional material for that.
 
